samples/_failures_safe/1761730227_7ec30e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_abe73021.c: In function ‘main’:
./samples/SAFE/__tmp_abe73021.c:172:12: error: missing terminating " character
  172 |     printf("\nTokens found
      |            ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_abe73021.c:172:5: error: expected expression at end of input
  172 |     printf("\nTokens found
      |     ^~~~~~
./samples/SAFE/__tmp_abe73021.c:172:5: error: expected declaration or statement at end of input
